k8s/12-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: dispatch
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
    - name: mongo
      port: 27017
      targetPort: mongo
